--- a/templates/book.html
+++ b/templates/book.html
@@ -240,23 +240,21 @@
                         <i class="fas fa-home"></i>
                         <span>Dashboard</span>
                     </a>
+                    <a href="/findgrounds" class="nav-item">
+                        <i class="fas fa-search"></i>
+                        <span>Find Grounds</span>
+                    </a>
                     <a href="#" class="nav-item active">
                         <i class="fas fa-calendar-alt"></i>
                         <span>Bookings</span>
                     </a>
-                    <a href="#" class="nav-item">
-                        <i class="fas fa-futbol"></i>
-                        <span>My Grounds</span>
-                    </a>
-                    <a href="#" class="nav-item">
-                        <i class="fas fa-chart-bar"></i>
-                        <span>Analytics</span>
-                    </a>
+                    
+                    
                     <a href="#" class="nav-item">
                         <i class="fas fa-cog"></i>
                         <span>Settings</span>
                     </a>
-                    <a href="#" class="nav-item">
+                    <a href="/logout" class="nav-item">
                         <i class="fas fa-sign-out-alt"></i>
                         <span>Logout</span>
                     </a>
