--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -261,19 +261,13 @@
                     <i class="fas fa-search"></i>
                     <span>Find Grounds</span>
                 </a>
-                <a href="./book.html" class="nav-item">
-                    <i class="fas fa-calendar-alt"></i>
-                    <span>My Bookings</span>
-                </a>
-                <a href="#" class="nav-item">
-                    <i class="fas fa-heart"></i>
-                    <span>Favorites</span>
-                </a>
+                
+                
                 <a href="#" class="nav-item">
                     <i class="fas fa-cog"></i>
                     <span>Settings</span>
                 </a>
-                <a href="#" class="nav-item">
+                <a href="/logout" class="nav-item">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>Logout</span>
                 </a>
@@ -326,7 +320,7 @@
                             <td>{{ booking.sportname}}</td>
                             <td><span class="status-badge status-confirmed">{{ booking.status }}</span></td>
                             <td>
-                                <button class="btn btn-secondary">View Details</button>
+                                <form action="/deletesbooking/{{booking._id}}" method="post"><button type="submit" class="btn btn-secondary">Cancel</button></form>
                             </td>
                         </tr>
                     {% endfor %}
