updates related to owner dashboard page

--- a/templates/addground.html
+++ b/templates/addground.html
@@ -155,10 +155,9 @@
             </div>
     
             <!-- Submit Button -->
-            <button type="submit" class="btn">Submit</button>
+            <button type="submit" class="btn">Submit</button><br>
             <p>{{status}}</p>
-            <a href="/owner/dashboard" class="nav-item">
-                <i class="fas fa-home"></i>
+            <a href="/owner/dashboard" class="btn">
                 <span>Dashboard</span>
             </a>
         </form>
