--- a/templates/mygrounds.html
+++ b/templates/mygrounds.html
@@ -200,7 +200,8 @@
             <div class="dashboard-header">
                 <h1>{{ownername.upper()}}'s Grounds</h1>
                 <div class="user-info">
-                    <button class="add-ground-btn">Add New Ground</button>
+                    <a href="/addground"><button class="add-ground-btn">Add New Ground</button></a>
+
                     <div class="user-avatar">{{ownername[0].upper()}}</div>
                 </div>
             </div>
